--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
   },
   "dependencies": {
     "hexo": "^3.2.0",
+    "hexo-clean-css": "0.0.3",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-index": "^0.2.0",
+    "hexo-generator-robotstxt": "^0.2.0",
+    "hexo-generator-seo-friendly-sitemap": "0.0.21",
     "hexo-generator-tag": "^0.2.0",
+    "hexo-html-minifier": "0.0.2",
     "hexo-renderer-ejs": "^0.3.0",
-    "hexo-renderer-stylus": "^0.3.1",
     "hexo-renderer-marked": "^0.3.0",
-    "hexo-server": "^0.2.0"
+    "hexo-renderer-stylus": "^0.3.1",
+    "hexo-server": "^0.2.0",
+    "hexo-uglify": "0.0.4"
   }
 }
